# vault-env

./: .gitignore  README.md  package.json
clients/python/: pyproject.toml
clients/python/vault_env/: __init__.py  client.py  device.py
clients/python/vaultdotenv/: cli.py  config.py
clients/python/vaultdotenv/commands/: auth.py  devices.py  init.py  keys.py  secrets.py  versions.py
server/: schema.sql  worker.js  wrangler.staging.toml  wrangler.toml
server/handlers/: admin.js  auth.js  billing.js  mfa.js  stripe.js
server/lib/: middleware.js  totp.js
server/migrations/: 0001_dashboard_auth.sql  0002_invites_and_plans.sql  0003_organizations.sql  0005_invite_permissions.sql
src/: cli.js  crypto.js  index.js  mcp.js
test/: test.js
test/unit/: config.test.js  index.test.js
