[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultdotenv"
version = "0.1.0"
description = "Drop-in python-dotenv replacement. One master key locally, everything else encrypted remotely."
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Matt Redman" }]
dependencies = [
    "cryptography>=41.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
vaultdotenv = "vaultdotenv.cli:main"
vde = "vaultdotenv.cli:main"
